[package]
name = "opengr2"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A file parser for Granny2 (.gr2) files written in pure rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.2"
